--- a/index.html
+++ b/index.html
@@ -312,13 +312,17 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="totalModules">Student's Module Load</label>
+                        <label for="totalModules">Student Module Load this Semester</label>
                         <select id="totalModules" required>
                             <option value="">Select number</option>
+                            <option value="1">1 module</option>
+                            <option value="2">2 modules</option>
                             <option value="3">3 modules</option>
                             <option value="4" selected>4 modules (typical)</option>
                             <option value="5">5 modules</option>
                             <option value="6">6 modules (overload)</option>
+                            <option value="7">7 modules (heavy overload)</option>
+                            <option value="8">8 modules (extreme overload)</option>
                         </select>
                     </div>
                 </div>
