--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Reality Check | Academic Workload Calculator</title>
+    <title>Student Reality Engine | Academic Workload Calculator</title>
     <style>
         * {
             margin: 0;
@@ -449,7 +449,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Student Reality Check</h1>
+            <h1>Student Reality Engine</h1>
             <p>Discover what you're actually asking your students to do</p>
         </div>
         
