--- a/weekly_planner.html
+++ b/weekly_planner.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Module Planner</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><defs><linearGradient id='bg' x1='0%25' y1='0%25' x2='100%25' y2='100%25'><stop offset='0%25' style='stop-color:%2300b894'/><stop offset='100%25' style='stop-color:%2326d0ce'/></linearGradient></defs><circle cx='16' cy='16' r='14' fill='url(%23bg)'/><text x='16' y='22' text-anchor='middle' fill='white' font-family='Arial' font-size='16' font-weight='bold'>📅</text></svg>" type="image/svg+xml">
     <style>
         * {
             margin: 0;
