--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Reality Check | Academic Workload Calculator</title>
+    <title>Student Reality Engine | Academic Workload Calculator</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><defs><linearGradient id='bg' x1='0%25' y1='0%25' x2='100%25' y2='100%25'><stop offset='0%25' style='stop-color:%23667eea'/><stop offset='100%25' style='stop-color:%23764ba2'/></linearGradient></defs><circle cx='16' cy='16' r='14' fill='url(%23bg)'/><text x='16' y='22' text-anchor='middle' fill='white' font-family='Arial' font-size='16' font-weight='bold'>📊</text></svg>" type="image/svg+xml">
     <style>
         * {
@@ -527,7 +527,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Student Reality Check</h1>
+            <h1>Student Reality Engine</h1>
             <p>Discover what you're actually asking your students to do</p>
         </div>
         
